--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+header p {
+  font-family: 'Dancing Script', cursive;
+  font-size: 5rem;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
